syntax = "proto3";
package tableau;
option go_package = "github.com/tableauio/tableau/proto/tableaupb";

import "tableau/protobuf/tableau.proto";

message Workbook {
  WorkbookOptions options = 1;
  repeated Worksheet worksheets = 2;
  string name = 3;
  map<string, int32> imports = 4;  // imported proto files
}

message Worksheet {
  WorksheetOptions options = 1;
  repeated Field fields = 2;
  string name = 3;
}

message Field {
  string type = 1;
  string full_type = 2;
  ListEntry list_entry = 3;
  MapEntry map_entry = 4;
  // Indicate this field's related type is predefined.
  // - message: message type
  // - enum: enum type
  // - list: list's element type
  // - map: map's value type
  bool predefined = 5;
  string name = 6;
  FieldOptions options = 7;
  
  // This filed is map or list if fields's length is not 0.
  repeated Field fields = 10;  

  message ListEntry {
    string elem_type = 1;
    string elem_full_type = 2;
  }
  message MapEntry {
    string key_type = 1;
    string value_type = 2;
    string value_full_type = 3;
  }    
}


